# FastApi_admin

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  alembic.ini  design.md  dev.py  docker-compose.yml  init_data.py  main.py  manage_db.py  pyproject.toml  requirements.txt  start.py  test_schemas_fixed.py  verify_final.py
.github/: copilot-instructions.md
.github/instructions/: fastapi.instructions.md  general.instructions.md  python_general_coding_guidelines.md
alembic/: env.py
alembic/versions/: 3a2c657e394c_initial_migration.py  994fef9106c3_opti_models.py
app/: __init__.py  config.py  exceptions.py  main.py  metrics.py
app/api/: __init__.py  dependencies.py
app/config/: permissions.yaml
app/core/: config.py  events.py  exceptions.py  middleware.py  security.py
app/dao/: __init__.py  base.py  operation_log.py  permission.py  role.py  user.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/middleware/: __init__.py  cors.py  logging.py  ratelimiter.py
app/models/: __init__.py  base.py  models.py  operation_log.py  permission.py  (+3 more)
docs/: api.md  cache_guide.md  deployment_guide.md  project_info.md  project_summary.md  quick_start.md  设计方案.md  项目文档.md
scripts/: permission_init.py
tests/: api_test_example.py  conftest.py  services_example.py  test_api_admin_dashboard.py  test_api_auth.py  test_api_operation_logs.py  test_api_others.py  test_api_permission_cache.py  test_api_permissions.py  test_api_roles.py  test_api_user_relations.py  test_api_users.py  verify_api_complete.py  verify_permissions.py
(+93 files in other folders)
